@@ -7,7 +7,7 @@
 \usepackage{ocamldoc}
 \begin{document}
 \tableofcontents
-\section{Module {\tt{Extensible\_variant}} : Testing display of extensible variant types.}
+\section{Module {\tt{Extensible\_variant}} : Testing display of extensible variant types and exceptions.}
 \label{Extensible-underscorevariant}\index{Extensible-underscorevariant@\verb`Extensible_variant`}
 
 
@@ -17,10 +17,19 @@
 
 
 
+Also check reference for {\tt{Extensible\_variant.M.A}}[\ref{extension:Extensible-underscorevariant.M.A}], {\tt{Extensible\_variant.M.B}}[\ref{extension:Extensible-underscorevariant.M.B}], {\tt{Extensible\_variant.M.C}}[\ref{extension:Extensible-underscorevariant.M.C}] and {\tt{Extensible\_variant.E}}[\ref{exception:Extensible-underscorevariant.E}]
+
+
+
 \label{TYPExtensible-underscorevariant.e}\begin{ocamldoccode}
 type e = ..
 \end{ocamldoccode}
 \index{e@\verb`e`}
+\begin{ocamldocdescription}
+Extensible type
+
+
+\end{ocamldocdescription}
 
 
 
@@ -103,6 +112,14 @@ C doc
 \end{ocamldocsigend}
 
 
+
+
+
+
+\label{exception:Extensible-underscorevariant.E}\begin{ocamldoccode}
+exception E
+\end{ocamldoccode}
+\index{E@\verb`E`}
 
 
 \end{document}
